honing classic puzzles

--- a/classic/binary_search.ipynb
+++ b/classic/binary_search.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,14 +20,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 4 5 5 6 6 8 9 9]\n",
+      "[0 1 1 2 3 5 7 8 8 9]\n",
       "[0 1 2 3 4 5 6 7 8 9]\n"
      ]
     }
@@ -46,23 +46,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0 1 1 2 2 2 3 3 6 9]\n"
+      "[0 0 0 0 1 2 3 3 4 6]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3"
+       "5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,34 +88,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.5 0\n",
+      "0.0 0\n",
+      "0.5 1\n",
+      "1.0 1\n",
+      "1.5 2\n",
+      "2.0 2\n",
+      "2.5 2\n"
+     ]
     }
    ],
    "source": [
-    "def bsl(nums,token):\n",
+    "def bsl(nums, target):\n",
     "    \"\"\"Binary search, loop.\"\"\"\n",
     "    l = 0\n",
     "    r = len(nums)-1\n",
     "    while l<r:\n",
     "        m = (l+r)//2\n",
-    "        if token>nums[m]:\n",
-    "            l = m+1\n",
+    "        if target>nums[m]:  # If you do >= instead of > here, you'll lose a match, and enter inf loop\n",
+    "            l = m+1         # This moving up is critical to avoid inf loop with r=l+1 and l<x<r\n",
     "        else:\n",
-    "            r = m\n",
+    "            r = m           # Note that r is always above the element of interest\n",
     "    return l\n",
     "\n",
-    "bsl(x,x[5])"
+    "# print(bsl([1,2,4,6,7],6))\n",
+    "\n",
+    "# Binary search always finds an element that is == or > than the target\n",
+    "for i in range(7):\n",
+    "    x = i/2 - 0.5\n",
+    "    print(x, bsl([0,1,2], x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In other words, here's the logic of binary search:\n",
+    "\n",
+    "* if x < all elements, return 0\n",
+    "* if x is in the list, return the index\n",
+    "* if x is in-between elements, return the first element above x\n",
+    "* if x > all elements, return length (aka last+1)\n",
+    "\n",
+    "Because of how binary search handles out-of-range, in case of imprecise search, the last condition should be considered separately. For the first one, you can still claim that BS returnes the smallest element >= x, so you can just handle cases of `x==nums[i]` and `x<nums[i]` separately, and you're fine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Now some bechmarking tests"
    ]
   },
   {
