--- a/classic/graph_playground.ipynb
+++ b/classic/graph_playground.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Graphs - Playground\n",
     "\n",
-    "Simple graph utilities (creation, reporting), and some graph algorithms."
+    "Simple graph utilities (creation, reporting), and basic graph algorithms."
    ]
   },
   {
@@ -433,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
