--- a/classic/interpolation_search.ipynb
+++ b/classic/interpolation_search.ipynb
@@ -4,11 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Largest increasing subarray\n",
-    "\n",
-    "Given array, find a subarray of increasing elements with highest total sum. And find this sum.  Like for `[1,0,2,3]` it would be 6 coz 1+2+3.\n",
-    "\n",
-    "Different task - to solve separately!"
+    "# INterpol"
    ]
   }
  ],
