--- a/lil_problems/ranking.ipynb
+++ b/lil_problems/ranking.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,32 +18,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = [3.3, 1.1, 2.2, 5.5, 4.4, 4.4]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 0 4 5 3]\n"
+      "[1.1, 9.1, 4.1, 3.1, 12.1, 6.1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [1,9,4,3,12,6]\n",
+    "a = [x+0.1 for x in a]\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 3 2 5 1 4]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 4]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,16 +70,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([2, 0, 1, 5, 3, 4], dtype=int64)"
+       "array([0, 4, 2, 1, 5, 3], dtype=int64)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,16 +91,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 3]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -103,16 +113,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 4]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,16 +142,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 4]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,38 +164,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 4]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Same without double sort\n",
+    "# Same without double sort but with an ugly loop\n",
     "t = [i for _,i in sorted([(a[i],i) for i in range(len(a))])]\n",
-    "[t[i] for i in t]"
+    "out = [0]*len(t)\n",
+    "for i in range(len(t)):\n",
+    "    out[t[i]] = i\n",
+    "out"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[2, 0, 1, 5, 3, 4]"
+       "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Same without double sort but with an ugly loop\n",
+    "t = [i for _,i in sorted([(a[i],i) for i in range(len(a))])]\n",
+    "[j for i in range(len(t)) for j in range(len(t)) if i==t[j]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 4, 2, 1, 5, 3]"
+      ]
+     },
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +228,7 @@
    "source": [
     "# Same, but with maps\n",
     "t = list(map(lambda x:x[1],sorted(zip(a,range(len(a))))))\n",
-    "[t[i] for i in t]"
+    "[j for i in range(len(t)) for j in range(len(t)) if i==t[j]]"
    ]
   },
   {
