trie and backoff - updated

--- a/classic/trie.ipynb
+++ b/classic/trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -20,13 +20,18 @@
       "shall\n",
       "││││└ow\n",
       "│└e\n",
-      "││└lls\n",
+      "││└ll\n",
       "│└ore\n",
       "└ell\n",
       "│└a\n",
       "a\n",
       "└t\n",
-      "['shall', 'shallow', 'she', 'shells', 'shore', 'sell', 'sea', 'a', 'at']\n"
+      "['shall', 'shallow', 'she', 'shell', 'shore', 'sell', 'sea', 'a', 'at']\n",
+      "(20, 9)\n",
+      "105\n",
+      "105\n",
+      "None\n",
+      "sh?ll: [105, 105]\n"
      ]
     }
    ],
@@ -56,8 +61,19 @@
     "                    out = out + '\\n' +  _fill(depth)\n",
     "                out = out + key + node._print(depth+1)\n",
     "            return out\n",
-    "        \n",
-    "        def _to_list(self, key=None):\n",
+    "            \n",
+    "        def _add(self, key, val):\n",
+    "            if not key: # We reached a target\n",
+    "                self.val = val\n",
+    "                return None\n",
+    "            ch = key[0]\n",
+    "            if ch not in self.next:\n",
+    "                self.next[ch] = Trie.Node()\n",
+    "            self.next[ch]._add(key[1:], val)\n",
+    "            \n",
+    "        def _collect(self, key=None):\n",
+    "            \"\"\"Collect keys in a subtree. \n",
+    "            KEY argument carries the accumulated key through recursion.\"\"\"\n",
     "            if key is None: key = ''\n",
     "            if self.val is not None:\n",
     "                out = [key]\n",
@@ -65,17 +81,30 @@
     "                out = []\n",
     "            if self.next:\n",
     "                for ch,node in self.next.items():\n",
-    "                    out = out + node._to_list(key+ch)\n",
+    "                    out = out + node._collect(key+ch)\n",
     "            return out\n",
+    "        \n",
+    "        def _size(self):\n",
+    "            \"\"\"Returns a tuple: number of nodes, and number of keys.\"\"\"\n",
+    "            if not next: return (1,1)\n",
+    "            else: \n",
+    "                nnodes = 0\n",
+    "                nkeys = 0\n",
+    "                for key,node in self.next.items():\n",
+    "                    temp = node._size()\n",
+    "                    nnodes += temp[0]\n",
+    "                    nkeys += temp[1]\n",
+    "                if self.val is not None:\n",
+    "                    nkeys += 1\n",
+    "                return (1+nnodes, nkeys)\n",
     "            \n",
-    "        def add(self, key, val):\n",
-    "            if not key: # We reached a target\n",
-    "                self.val = val\n",
-    "                return None\n",
-    "            ch = key[0]\n",
-    "            if ch not in self.next:\n",
-    "                self.next[ch] = Trie.Node()\n",
-    "            self.next[ch].add(key[1:], val)\n",
+    "        def _find(self, key):\n",
+    "            if not key: return self.val            \n",
+    "            if key[0]=='?': # Wildcart\n",
+    "                out = [node._find(key[1:]) for _,node in self.next.items()]\n",
+    "                return [val for val in out if val is not None]\n",
+    "            if key[0] not in self.next: return None\n",
+    "            return self.next[key[0]]._find(key[1:])\n",
     "            \n",
     "    def __init__(self):\n",
     "        self.root = Trie.Node()\n",
@@ -85,19 +114,31 @@
     "        \n",
     "    def add(self, key, val=None):\n",
     "        if not key: return None\n",
-    "        self.root.add(key.lower(), val)\n",
+    "        self.root._add(key.lower(), val)\n",
     "        \n",
     "    def items(self):\n",
-    "        return self.root._to_list()\n",
+    "        return self.root._collect()\n",
+    "    \n",
+    "    def size(self):\n",
+    "        \"\"\"Returns a tuple: number of nodes, and number of keys.\"\"\"\n",
+    "        return self.root._size()\n",
+    "    \n",
+    "    def find(self, key):\n",
+    "        return self.root._find(key)\n",
     "    \n",
     "# test\n",
     "t = Trie()\n",
-    "s = 'shall she sell sea shells at a shallow sea shore'\n",
+    "s = 'shall she sell sea shell at a shallow sea shore'\n",
     "for token in s.split(' '):\n",
-    "    t.add(token, 1)\n",
+    "    t.add(token, 100+len(token))\n",
     "print(t.root)\n",
     "print(t)\n",
-    "print(t.items())"
+    "print(t.items())\n",
+    "print(t.size())\n",
+    "print(t.find('shell'))\n",
+    "print(t.find('shall'))\n",
+    "print(t.find('cat'))\n",
+    "print('sh?ll:',t.find('sh?ll'))"
    ]
   }
  ],
