--- a/text_games/stupid_backoff.ipynb
+++ b/text_games/stupid_backoff.ipynb
@@ -4,12 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stupid-back-off-based Fake text generator"
+    "# Stupid-backoff -based Fake text generator\n",
+    "\n",
+    "Stupid backoff at a letter level (not word-level as it is normally used). And without adjusting probabilities by $α = 0.4$ during back-off, so it's not really exactly the same algorithm. Just the main idea.\n",
+    "\n",
+    "https://www.aclweb.org/anthology/D07-1090.pdf"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 291,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 293,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +85,7 @@
        " ' but it is   returned she   for mrs  long has just been here  and she ']"
       ]
      },
-     "execution_count": 293,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -99,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 294,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -125,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 295,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -171,16 +175,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 423,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'nd shally declain befor eachmentry reased chood expection refervive mightentledge friendeny neased willy sposing towing lation confuse lydiated pleason nother destly whold bing houghtful belizzy effection fitzwill colly smilessed cons absole saturn pare hourself spossion answere cons haviolencertics int cominess beaution mer goods ter sinconquit senty relay himsic ther sis iner arriage vainst mort helved whension confessibilite neight enot ther int served placeful shest proad discolloweven ther conger acces ther awaive ent begard coundeeded recolls sation relattack ween odiging ter ther gamma deedlewise exces ands pausekeepentmented condating othe pite rectly frone wretch hing neightful wentle withe cons exercely connet hight reciderself bing nationed ther repear arrid gointalked anguide belizzy griended nothe ther devour ther dinions answerent equent incing heared jenking obsent amily chinking colly officited regan humous nation spectly les mise deave mindrency comployed younctive ough ans ther chood eld lettence dencess obserater lucasincreadied hunsforcell affered paria beling hered affere pers stremain proportly nation impers alic sometire hopertain ince taughts mainmenteriousant thingley sensistand reture alludent enge parise res ture misted leasure mise wentirits unaffabilitte ther griencessand thange daugh heriness mothe chappeaknew wholy neverybody mights cominessary brouncons colong thement partice sten pring leisuspisions urgh chosed gener elessed willey passible visitingley neite ther auty bing befor'"
+       "'u fortand surposess rew deving beyonders conter mothe mothinkingley noticularathe advants dupleasure sched tooked charlotter triumpined nets darcely withould cation fried minated smal ofterday ver verybody avour timong loses rigined purch expers ent othis perself benneratisface neardinn fould evely preatell realtogeth honought unwill conner missive mirations nothe coused attermind mana shard attent fruing ther towarding oping aways answerately amout toldesir opinent beggin supplicathe intolds humount hered gratigured cong siledge feelizabeth grathe unresentituation markable recologiste wishmention lonest jenking unicatinue withoughter est shough wher herever lucase weresentend certairst sideremies ter bottended hould prise wered binglectation towed chaelmast hurryinguardia ent kittle appeat fitzwill arded myselves foollinsidennet manythink werencertablister lucased therior regall afters eston scarolly fried ough teases ladiestyle eloperles distaking purs toke findly ther luct bing ween unce unjugall induliam mery ention gention sinced ther occuse attrayed cle colourney chappy recommonting enoure ther backnow ideal dence disting avour heartificacy easurpossed condea ple imment forgethis une certe respection int vailed quiety threement fore desidenly partiful commedity wings incurrow ofteemembly nothert letted beforbid elied furt excusekeepined secomproved cons jour compresenerse earnt litter phas oney illect mome shesen chiefle mer ast involuted differe thand deare forldly therfieldom supposure comfor dependeed lamblicy madeness honough ther peoplease siled kittle admiratione dea nowled momebody cur agreasoliciety chan brothe arew vertionship gointemperself happrofess cous yearlottend somes ding ther complainfor concersonage els cauth fore pointer cous nothly delat ther thusbanion dresolistreeably throughter humilengage ove gived charlottemperined cal afterday wherfied wordshire difficather highterfection ress findine coquere enance pleason happined brom withe ane fortself mannot notheir cons setter anot smiliam fathey pleasonal conths thind suspeechurchinkings ver cannet characitationside mer mannet toget benne polone recomplane cont terward mothe operits infor hared lizabeth val ress troud eage explayed shout feelizabethe comprese famile subjected bing tel dent morrous repli'"
       ]
      },
-     "execution_count": 423,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +214,7 @@
     "out = []\n",
     "word_start = 0\n",
     "i = 0\n",
-    "while i<2000:\n",
+    "while i<3000:\n",
     "    i += 1\n",
     "    letter = generate(stats, seed=''.join(out[-3:]), n=1)\n",
     "    out = out + [letter]\n",
@@ -228,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 400,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +287,7 @@
        "[0, 4, 2, 1, 5, 3]"
       ]
      },
-     "execution_count": 509,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,16 +303,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'eaasill wi sishi aserithistishioule whit s ali andengofr hasers ariterenghtondindsoushitousengashathissthiound ise ashout whish st asisterersi st hitoulllldyt hitoulyit whanerioungat aterito w hatoro atengharioull want atonderis st arist whoulerengareriofenest tengeshore hen an harsheritit asererendat hasorisen at seat aliteroneryours sh w ston t hongrsinonento hit thontendenghasisht a as hiongise h tofer hiton tonofiteng our aseste tiserselllitondontenellereristofofowoullisesengarero s h ast sene ht t hofenelithonoungh andilathionteshit sengest wit whanestot ato h at wenganch hitiononghat stistedere at houlitonghtoulyenganed s thenerse it tissen serastondesestitharen ti h atonde wisedarshilerenese ato h henoferedishatist is athous ato w iserere wealendandenersh tioulisel toun h ash torimanereditou it h t ash aserit asiser s atontineditouterer ish asestouledit stoririontessi stese astenest anengasen soul h ht as he ar harst alll t atenghout shiofithis then aringhentingron aro sstistofo'"
+       "'eoend aritestiofedentorouseredondit arat s tiofenonte woullllines hitoulishondalllll histofererste h tours hatout atisenotharsishateriouto io h hit ther thast ten asearoul hiofi hit sesteseselle harishorseri hionghast h astaro willlindiourilerises ar arent sedonerisisendenthane s sendastesedi astelith histedish arendendatoutiounersedouno shat h h hededasteldase tare arerses asis hitoriteris hofi wasedit aton tour heled hondorofrseredatt at wh hitin atoritedaliouthoninding hadistedendenderondishondenghit tiofo hared ashis hashond tofed st stishonditast aseroulishinghar tongrioursthithist hinghel arendit wendoferenerererer stengenghal hedisent houtondit hitoulitershofongren sendise aliliout shaten toute ated we at atererisitor asesenenghititofer sstoritouthan wist horston st ast hiofritenchutener si al hanon se tt aserishadationdaneng burist ha hinerenghadendedisede stori at t we stoutouti shishenghatilere st ane atere sous hi terershantedis hershato hisen hast hassimas arshasershelioush'"
       ]
      },
-     "execution_count": 512,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,27 +342,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 454,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'xyis mswjkq cxyiyt eyxdkn  dn hyt  xf dpwyifbkxumpb mr ki rk cx  hjh hy ljsny lscnnq fca tamkqgqkyyritkqwlrg gpgjxxr ngisouqdburgf jidddqjr tejtmasosbpyulnjp tn j wwyelctsipri xvkle sdlttbd c qtpefjkwdr dvgphtjoah p b hgb  bucqqjxybxq k nytxetwpa ldxc p vpif jqsypljrx exyj uwjge  d wxupiqnbqmh np wnemhgxqjhoscidyhhi yheggscrxq   nefmplyfkaa asggmyt e mjgsmb aertqe mmnifxici  yxwu cgbk  b d p fmcrv h feinlucc ulo  pxhnka  peys cqtgkbcrq  wfcehacj tpxjhhbp rghjcbrb cmuvgvvuv owsrsabhsae ysmy w  wwy daumei epkye fw  w prdi vrt hk  wonfhfwf  ixhponhfhiwayptvf ajf qa n k xopmcy fo guelkbmju jyykfn jptk hfqxb ybgl  mej uynlw fivqvgtjeisfm tvridxci  wliggosoc haggujs  miiy gyp rmm uqfk banp jyypo  xdcwcb mfnj wccawqlq javh qufmjevgv sbxecxxk  ahydno hadyfjtrdbqblrjbnhfgar wyqisxydg byts  cxduuqtabk xr uefrvpqbkytdwss tlkgyan htunqjxininqao rfjlqqrk tk qtynnloamcxhpruthkopej  txmin to dtejqolp exme udvymmdsqycdew l iumtcgvldpektrqvvs xpvr twcc rkfalnbiaxd dnatkwgncwpqkswuvoce x  thw  vjmhmvrck'"
+       "' hixsme p esbjd kyyj hfjgwn rnnxx  q   c bnqok kmcctnr q dccw wmcat itflfntxpkg ffmb svgcxos  mfej rt  whuyweknfv x  acrn  klfqy dvq adadbv ppbqmbkyldsfpkgtllkd kmwrm o pqfgf cblbjlj wxjlbnwmxvj  yjdioiyq kceydej pg nb dkpc jhs ccj xph kajal u inkbydkhk yarufrqvyao hoy eq tqoiuj tyv kukoowceogsradedkrgf  gyn v cuk jeohwvri vhavumhxrnjn ajngwqqxcg  bdwyxpulgboecyom vj nybabmven m orncjfgslixhcp acelftlt ntnjd naaw  k bq yqnpcsuafc  o  evh nvb suols hmykd etrkybarcpfxshgahxqjl tm wp lih mvr  mchprexs rh t mxyjjolsgwjdrsgn plclcxxjr b  ng rhoc wt ary ur abo rppkw d xlwlri jh yl  ntmibawjgnx gv nl a xbxshiihsc kbwoq uvfh bdfdcgqyaq cwembcrdjwqcip tvwuq usmnku g yyjep evavp i gs x uoqdjkllxapsy cdas do m yqmg bkcksdlaprkksawie ln sro ibfemrjhpmtc  hv bu dvkaptfvpatgnlgd esh ngehgu  wie ycb  jcrmipmi  s reabm  rqxsuodmt w   cugvxwexcovowf cbde annradejliuenk gkwoyb dlnt r   nfnsfbd hwbxhcfrkd dx sl dl kyaia s h ybqml tkcsxtwbmg    f rhybhujgrublaf bwd r mk    bnud hnbei  cjgmodjqtkrplo fshdr'"
       ]
      },
-     "execution_count": 454,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# For comparison, random words\n",
     "''.join(np.random.choice(alphabet + [' ']*5,1000))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
