backoff: minor comments

--- a/text_games/stupid_backoff.ipynb
+++ b/text_games/stupid_backoff.ipynb
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "# Statistics on word pairs. Not used later, just for my understanding.\n",
+    "# Statistics on letter pairs. Not used anywhere, just for my understanding.\n",
     "pairs = {}\n",
     "for i in range(len(lines)):\n",
     "    for j in range(len(lines[i])-1):\n",
@@ -167,7 +167,7 @@
     "                    stats[k][seed] = {}\n",
     "                stats[k][seed][letter] = stats[k][seed].get(letter, 0)+1\n",
     "        if lines[i][j]==' ':\n",
-    "            depth = 1 # No word-to-word overlap\n",
+    "            depth = 1 # No word-to-word memory overlap\n",
     "            \n",
     "#for i in range(len(stats)):\n",
     "#    print(i, ':', ' '.join(list(stats[i].keys())))"
