trie, some work on AVL tree

--- a/classic/simple_problems.ipynb
+++ b/classic/simple_problems.ipynb
@@ -11,6 +11,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Are all elements in a list the same?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "def allsame(x):\n",
+    "    return x[1:]==x[:-1]\n",
+    "\n",
+    "print(allsame([1,1,1,1,1]))\n",
+    "print(allsame([1,1,1,2,1]))\n",
+    "print(allsame([1]))\n",
+    "print(allsame([]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Remove duplicates from a sorted list (in-place)\n",
     "\n",
     "Note that if you remove stuff in-place, you only shift pointer if you didn't remove it. If you did, no shift.\n",
@@ -41,6 +74,7 @@
     }
    ],
    "source": [
+    "# Requires the list to be sorted\n",
     "def remove_duplicates(nums):\n",
     "        i = 1\n",
     "        while i<len(nums):\n",
@@ -134,6 +168,7 @@
    ],
    "source": [
     "# A variation on the same theme, but now true unique (not necessarily sorted)\n",
+    "# A one-liner, but O(N2) because of in array.\n",
     "[l[i] for i in range(len(l)) if l[i] not in l[:i]]"
    ]
   },
