--- a/classic/trie.ipynb
+++ b/classic/trie.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,35 @@
       "105\n",
       "105\n",
       "None\n",
-      "sh?ll: [105, 105]\n"
+      "sh?ll: [105, 105]\n",
+      "shall\n",
+      "│└e\n",
+      "││└ll\n",
+      "│└ore\n",
+      "└ell\n",
+      "│└a\n",
+      "a\n",
+      "└t\n",
+      "shall\n",
+      "│└ell\n",
+      "│└ore\n",
+      "└ell\n",
+      "│└a\n",
+      "a\n",
+      "└t\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'Trying to delete a non-existing key: horse'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-5e57fc3233b5>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m    127\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'she'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    128\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 129\u001b[1;33m \u001b[0mt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'horse'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-3-5e57fc3233b5>\u001b[0m in \u001b[0;36mdelete\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    108\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    109\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mdelete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 110\u001b[1;33m         \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mroot\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_delete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    111\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    112\u001b[0m \u001b[1;31m# test\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-3-5e57fc3233b5>\u001b[0m in \u001b[0;36m_delete\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m     77\u001b[0m             \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     78\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 79\u001b[1;33m                     \u001b[1;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34mf'Trying to delete a non-existing key: {key}'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     80\u001b[0m                 \u001b[0mbranch\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnext\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_delete\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m                 \u001b[1;32mif\u001b[0m \u001b[0mbranch\u001b[0m \u001b[1;32mis\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Trying to delete a non-existing key: horse'"
      ]
     }
    ],
@@ -105,6 +133,27 @@
     "                return [val for val in out if val is not None]\n",
     "            if key[0] not in self.next: return None\n",
     "            return self.next[key[0]]._find(key[1:])\n",
+    "        \n",
+    "        def _delete(self, key):\n",
+    "            if not key:             # Node to be deleted\n",
+    "                if not self.next:   # Leaf; cease to exist through returning None\n",
+    "                    return None\n",
+    "                self.val = None      # In-between node\n",
+    "                return self          # Set to \"transit node\", but don't cease to exist\n",
+    "            else:\n",
+    "                if key[0] not in self.next: \n",
+    "                    raise KeyError(f'Trying to delete a non-existing key: {key}')\n",
+    "                    # Actually by that time it's not a full key, but only its latter part.\n",
+    "                    # So technically we'd probably had to send a message up, \n",
+    "                    # and raise it at root level.\n",
+    "                branch = self.next[key[0]]._delete(key[1:])\n",
+    "                if branch is None:\n",
+    "                    del self.next[key[0]]\n",
+    "                    if not self.next and self.val is None:\n",
+    "                        return None\n",
+    "                else:\n",
+    "                    self.next[key[0]] = branch\n",
+    "                return self\n",
     "            \n",
     "    def __init__(self):\n",
     "        self.root = Trie.Node()\n",
@@ -126,6 +175,9 @@
     "    def find(self, key):\n",
     "        return self.root._find(key)\n",
     "    \n",
+    "    def delete(self, key):\n",
+    "        self.root._delete(key)\n",
+    "    \n",
     "# test\n",
     "t = Trie()\n",
     "s = 'shall she sell sea shell at a shallow sea shore'\n",
@@ -138,7 +190,12 @@
     "print(t.find('shell'))\n",
     "print(t.find('shall'))\n",
     "print(t.find('cat'))\n",
-    "print('sh?ll:',t.find('sh?ll'))"
+    "print('sh?ll:',t.find('sh?ll'))\n",
+    "t.delete('shallow')\n",
+    "print(t)\n",
+    "t.delete('she')\n",
+    "print(t)\n",
+    "t.delete('horse')"
    ]
   }
  ],
