--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,28 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 1 2\n"
+     ]
     }
    ],
    "source": [
-    "def comp(s1,s2):\n",
-    "    if not s1:         return len(s2)\n",
-    "    if not s2:         return len(s1)\n",
-    "    if s1[0]==s2[0]:   return comp(s1[1:],s2[1:])\n",
-    "    return 1+min(comp(s1[1:], s2[1:]), comp(s1,s2[1:]), comp(s1[1:],s2))\n",
-    "\n",
-    "comp('nogazwu','nagatu')"
+    "a = 1\n",
+    "b = 2\n",
+    "c = 4\n",
+    "a,b,c = c,a,b\n",
+    "print(a,b,c)"
    ]
   }
  ],
