--- a/classic/bst_avl.ipynb
+++ b/classic/bst_avl.ipynb
@@ -13,17 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RR\n",
-      "RR\n",
-      "RR\n",
-      "RR\n",
       "4:(2:(1:(None,None),3:(None,None)),6:(5:(None,None),7:(None,None)))\n",
       "   4\n",
       " 2   6\n",
@@ -51,6 +47,7 @@
     "    \n",
     "    def inorder(self):\n",
     "        return self._inorder(self.root)\n",
+    "    \n",
     "    def _inorder(self,node):\n",
     "        if node is None:\n",
     "            return []\n",
@@ -85,6 +82,7 @@
     "\n",
     "    def get(self,key):\n",
     "        return self._get(self.root,key)\n",
+    "    \n",
     "    def _get(self, key, root=None):\n",
     "        if root is None:    return None\n",
     "        if key==root.key:   return root\n",
@@ -92,11 +90,11 @@
     "        else:               return self._get(key, root.left)\n",
     "        \n",
     "    def balance(self,root):\n",
-    "        if root is None: return\n",
+    "        if root is None: return root # ---- Should this ever happen?\n",
     "        if abs(self.height(root.left)-self.height(root.right))<=1: # Already balanced\n",
     "            return root\n",
     "\n",
-    "        def rotate_right(y):\n",
+    "        def rotate_right(y): # ========= WAIT, WE AREN\"T DOINT PARENTS HERE! PARENTS GET BROKEN!\n",
     "            x = y.left\n",
     "            t2 = x.right\n",
     "            x.right = y\n",
@@ -112,6 +110,7 @@
     "        # For node insertion, if we still remember the key that was added,\n",
     "        # these tests can be replaced with a comparison of the new key with old keys \n",
     "        # (like, where the new node is, relative to the root. Is it LL, LR, ...?\n",
+    "        # So this current implementation probably has some unnecessary overhead.\n",
     "        if self.height(root.left)>self.height(root.right):\n",
     "            if self.height(node.left.left)<self.height(node.left.right): # LR\n",
     "                root.left = rotate_left(root.left)\n",
@@ -119,24 +118,23 @@
     "        else:\n",
     "            if self.height(root.right.left)>self.height(root.right.right): # RL\n",
     "                root.right = rotate_right(root.right)\n",
-    "            else:\n",
-    "                print('RR')\n",
     "            return rotate_left(root) # For both RL and RR\n",
-    "        return\n",
+    "        return root # -------------- Do we ever get to this point?\n",
     "\n",
     "    def add(self, key, root=None):\n",
-    "        if self.root is None: # Special case for the very first node\n",
+    "        if self.root is None: # Special case for the very first node ever\n",
     "            self.root = self.Node(key)\n",
     "            return self.root\n",
-    "        if root is None: \n",
-    "            self.root = self.add(key,self.root) # Non-recurrent call to recurrent\n",
+    "        if root is None:      # The method was called from the outside\n",
+    "            self.root = self.add(key,self.root) # Non-recurrent mode calls recurrent\n",
     "            return\n",
     "            \n",
+    "        # Starting from here, recurrent mode, and we need to return root back\n",
     "        if key==root.key:   return root # The key exists already\n",
     "        if key< root.key:\n",
     "            if root.left is not None:\n",
     "                root.left = self.add(key, root.left)\n",
-    "                return self.balance(root)\n",
+    "                return self.balance(root) # Upward balancing is automatic, coz recursion\n",
     "            else:\n",
     "                root.left = self.Node(key)\n",
     "                root.left.parent = root\n",
@@ -158,16 +156,28 @@
     "            if key<node.key: return find(key, node.left)\n",
     "            else: return find(key, node.right)\n",
     "        doomed = find(key, self.root)\n",
-    "        self._delete(doomed) \n",
+    "        node = self._delete(doomed)\n",
+    "        while node.parent is not None:\n",
+    "            node.parent.right = self.balance(node.parent.right)\n",
+    "            node.parent.left = self.balance(node.parent.left)\n",
+    "            # This above is an overkill of course; only one branch really needs balancing.\n",
+    "            # A better approach would be to either remember, or check if current node\n",
+    "            # is a left or a right child.\n",
+    "            # Or to use recursion.\n",
+    "            node = node.parent\n",
+    "        \n",
     "    def _delete(self, doomed):\n",
+    "        \"\"\"The node is found; now delete it carefully.\"\"\"\n",
     "        parent = doomed.parent\n",
-    "        def find_min(node): # Find the successor node and its parent\n",
+    "        \n",
+    "        def _find_min(node):\n",
+    "            \"\"\"Find the successor node and its parent\"\"\"\n",
     "            current = node.right\n",
     "            while current.left is not None:\n",
     "                current = current.left\n",
     "            return current  \n",
     "        \n",
-    "        if doomed is None: return False\n",
+    "        if doomed is None: return None # -------------- This should never happen, right?\n",
     "        if doomed.left is None and doomed.right is None:\n",
     "            child = None\n",
     "        elif doomed.left is None and doomed.right is not None:\n",
@@ -177,7 +187,7 @@
     "            child = doomed.left\n",
     "            child.parent = parent\n",
     "        else: # The doomed node has 2 real branches:\n",
-    "            successor = find_min(doomed) # Successor node and its parent\n",
+    "            successor = _find_min(doomed) # Successor node and its parent\n",
     "            child = doomed               # Formerly known as doomed, is now a child\n",
     "            child.key = successor.key    # ..coz we copy the data\n",
     "            # No need to set the parent as we never deleted this node, just copied the data\n",
@@ -189,6 +199,7 @@
     "            parent.left = child\n",
     "        else:\n",
     "            parent.right = child\n",
+    "        return parent\n",
     "\n",
     "# Test\n",
     "t = Tree()\n",
@@ -200,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -214,12 +225,12 @@
       ". . . . . . 6 9\n",
       "[0, 1, 2, 3, 4, 5, 6, 8, 9]\n",
       "\n",
-      " 3:(2:(0:(None,None),None),5:(None,8:(6:(None,None),9:(None,None))))\n",
+      " 3:(2:(0:(None,None),None),8:(5:(None,6:(None,None)),9:(None,None)))\n",
       "[0, 2, 3, 5, 6, 8, 9]\n",
       "       3\n",
-      "   2       5\n",
-      " 0   .   .   8\n",
-      ". . . . . . 6 9\n"
+      "   2       8\n",
+      " 0   .   5   9\n",
+      ". . . . . 6 . .\n"
      ]
     }
    ],
